--- a/Styles2.css
+++ b/Styles2.css
@@ -4,6 +4,7 @@
     opacity: 1;
     transition: 1s opacity;
     font-family: "Times New Roman", Times, serif;
+    background-color: #303030;
 }
     body.fade-out {
         opacity: 0;
@@ -14,7 +15,6 @@
     font-size: 2vw;
     overflow: hidden;
     width: 100%;
-    background-color: #303030;
 }
 
 
@@ -35,9 +35,13 @@
     font-size: 2vw;
     border-radius: 25px;
 }
-a {
+.headerItems a {
     color: black;
     text-decoration: none;
+}
+a { 
+    color: blue;
+    
 }
 
 
@@ -144,6 +148,16 @@ a {
     background-color: #c4c4c4;
     border-radius: 10px;
 }
+.aboutMeTitle {
+    margin: auto;
+    background-color: #c4c4c4;
+    border-radius: 10px;
+    margin-bottom: 2%;
+    padding-bottom: 1vw;
+    padding-top: 1vw;
+    font-size: 115%;
+    text-align: center;
+}
 .aboutMeSpace {
     width: 27.5%;
     float: left;
@@ -151,10 +165,14 @@ a {
 .aboutMeImage {
     margin: auto;
     width: 80%;
+
 }
 .aboutMeSection {
-    margin-top: 1%;
-    overflow: auto;
+    padding-bottom: 2vw;
+    width: 98%;
+    margin: auto;
+    overflow: hidden;
+    position: relative;
 }
 
 
@@ -164,10 +182,13 @@ a {
     padding: 10px;
 }
 .divTest {
-    background-color:aqua;
+    
+    background-image: url("Images/About\ Me/sunglasses.jpg");
+    background-size: contain;
+    width: 100%;
+    height: 100%;
+    position: absolute;
     overflow: auto;
+    
 }
 
-input[type="text"]textarea {
-    width: 20%;
-}
